apps/table-talk/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: table-talk
  namespace: managoat-demos
  labels:
    app: table-talk
spec:
  type: ClusterIP
  selector:
    app: table-talk
  ports:
    - port: 80
      targetPort: 8080
