apps/table-talk/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: table-talk
  namespace: managoat-demos
  labels:
    app: table-talk
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`table-talk.demo.managoat.com`)"
      kind: Rule
      services:
        - name: table-talk
          port: 80
  tls:
    secretName: table-talk-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: table-talk-http
  namespace: managoat-demos
  labels:
    app: table-talk
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`table-talk.demo.managoat.com`)"
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: default
      services:
        - name: table-talk
          port: 80
